# axum-sqs-example

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/lib/: app_state.rs  auth_claim.rs  auth_claim_mid.rs  backend_server.rs  input_schemas.rs  mod.rs  my_extractors.rs  my_math.rs  protected_router.rs  users_router.rs
tests/: integration_tests.rs
