[package]
name = "axum-sqs-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
utoipa-axum = "0.2.0"

[lib]
name = "axum_sqs_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "axum-sqs"
path = "src/main.rs"
