[package]
name = "axum-sqs-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa-axum = "0.2.0"

[lib]
name = "axum_sqs_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "axum-sqs"
path = "src/main.rs"

[dev-dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
tokio-test = "0.4.4"
